# NewsMinds

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  destroy.yml  validate.yml
alembic/: env.py
alembic/versions/: a6dfe335ffc8_initial_tables_users_sources_articles.py  b1234567890a_add_totp_and_admin_user.py  cfe31dc535ab_add_collection_tasks_table.py  ebfd007e54ab_add_source_type_and_source_config_to_.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/articles/: page.tsx
frontend/src/app/(dashboard)/articles/[id]/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/intelligence/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/(dashboard)/sources/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/auth/: login-form.tsx
frontend/src/components/dashboard/: recent-articles.tsx  stats-cards.tsx
frontend/src/components/layout/: mobile-nav.tsx  sidebar.tsx  topbar.tsx
frontend/src/components/sources/: source-form.tsx  source-table.tsx
frontend/src/lib/: api-client.ts  auth.ts  utils.ts
frontend/src/providers/: auth-provider.tsx
frontend/src/types/: api.ts
infra/: main.bicep  main.json
infra/config/: allowed-ips.json
infra/environments/: dev.bicepparam  prod.bicepparam
infra/modules/: alerts.bicep  app-insights.bicep  app-service.bicep  container-app-api.bicep  container-app-frontend.bicep  container-app-qdrant.bicep  container-apps-env.bicep  container-registry.bicep  key-vault.bicep  log-analytics.bicep  postgresql.bicep  redis.bicep  sql-database.bicep  storage-account.bicep  vnet.bicep  vnet.json
scripts/: docker-entrypoint.sh  ingest_articles.py  seed_sources.py  setup-azure-oidc.sh  test_api.sh
src/agents/: __init__.py  intelligence_agent.py  research_agent.py  state.py
src/api/: Readme.md  main.py  pyproject.toml
src/api/core/: config.py  database.py  deps.py  logging.py  rate_limit.py  security.py
src/api/models/: __init__.py  article.py  base.py  collection_task.py  source.py  user.py
src/api/routers/: articles.py  auth.py  collection.py  intelligence.py  sources.py  users.py
src/api/schemas/: __init__.py  article.py  source.py  user.py
src/api/services/: ai.py
src/collection/: service.py
src/collection/adapters/: newsapi_adapter.py  rss_adapter.py
src/mcp_servers/news_search/: __init__.py  server.py
src/rag/: chunking.py  embeddings.py  retriever.py  vector_store.py
tests/: conftest.py
tests/agents/: test_intelligence_agent.py
tests/api/: test_ai.py  test_articles.py  test_auth.py  test_health.py  test_sources.py
